--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-global-events": "1.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
