--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1",
-    "vue-global-events": "1.1.2"
+    "vue-global-events": "1.1.2",
+    "screenfull": "5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
