--- a/package.json
+++ b/package.json
@@ -13,7 +13,16 @@
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1",
     "vue-global-events": "1.1.2",
-    "screenfull": "5.0.0"
+    "screenfull": "5.0.0",
+    "bootstrap": "4.3.1",
+    "vuedraggable": "2.23.2",
+    "jquery": "1.9.1",
+    "popper.js": "^1.14.7",
+    "sass": "^1.3.0",
+    "fibers": "3.1.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.25",
+    "@fortawesome/free-solid-svg-icons": "5.11.2",
+    "@fortawesome/vue-fontawesome": "0.1.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
