--- a/package.json
+++ b/package.json
@@ -8,31 +8,31 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.1.2",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.6",
-    "vuex": "^3.0.1",
-    "vue-global-events": "1.1.2",
-    "screenfull": "5.0.0",
-    "bootstrap": "4.3.1",
-    "vuedraggable": "2.23.2",
-    "jquery": "1.9.1",
-    "popper.js": "^1.14.7",
-    "sass": "^1.3.0",
-    "fibers": "3.1.0",
     "@fortawesome/fontawesome-svg-core": "1.2.25",
     "@fortawesome/free-solid-svg-icons": "5.11.2",
-    "@fortawesome/vue-fontawesome": "0.1.8"
+    "@fortawesome/vue-fontawesome": "0.1.8",
+    "bootstrap": "4.3.1",
+    "core-js": "^3.6.5",
+    "fibers": "3.1.0",
+    "jquery": "1.9.1",
+    "popper.js": "^1.16.1",
+    "sass": "^1.26.11",
+    "screenfull": "5.0.0",
+    "vue": "^2.6.12",
+    "vue-global-events": "1.1.2",
+    "vue-router": "^3.4.5",
+    "vuedraggable": "2.23.2",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "babel-eslint": "^10.0.1",
+    "@vue/cli-plugin-babel": "^4.5.6",
+    "@vue/cli-plugin-eslint": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
+    "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.12"
   }
 }
